<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFCBC0"
    android:layout_gravity="center_horizontal">

    <View
        android:layout_width="360dp"
        android:layout_height="520dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="29dp"
        android:background="#FEB5C0" />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="130dp"
        android:layout_marginTop="29dp"
        android:text="@string/update"
        android:textSize="50sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:background="#DCD5D8"
        android:text="@string/back"
        android:textColor="#607D8B"
        android:textSize="20sp"
        app:backgroundTint="@null"
        tools:ignore="RelativeOverlap,TextSizeCheck" />

    <Button
        android:id="@+id/select_entity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="497dp"
        android:background="#DCD5D8"
        android:text="@string/select_entity"
        android:textColor="#607D8B"
        android:textSize="20sp"
        app:backgroundTint="@null"
        tools:ignore="RelativeOverlap,TextSizeCheck" />

    <ImageView
        android:id="@+id/imgGallery"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="455dp"
        android:contentDescription="@string/imgGallery" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="241dp"
        android:background="#FFFF00"
        android:text="name"
        android:textSize="15sp"
        tools:ignore="HardcodedText,RelativeOverlap,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="103dp"
        android:background="#FFFF00"
        android:text="price"
        android:textSize="15sp"
        tools:ignore="HardcodedText,RelativeOverlap,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/update_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="297dp"
        android:background="#DCD5D8"
        android:text="@string/update_image"
        android:textColor="#607D8B"
        android:textSize="20sp"
        app:backgroundTint="@null"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/newImgGallery"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/etUpdateName"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="112dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:ignore="VisualLintOverlap" />

    <EditText
        android:id="@+id/etUpdatePrice"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="110dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="Price"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:ignore="DuplicateIds,HardcodedText,VisualLintOverlap" />

    <Button
        android:id="@+id/update_entity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginBottom="29dp"
        android:background="#DCD5D8"
        android:text="@string/update_entity"
        android:textColor="#607D8B"
        android:textSize="20sp"
        app:backgroundTint="@null"
        tools:ignore="DuplicateIds,RelativeOverlap,TextSizeCheck" />

</RelativeLayout>
